--- a/project1.html
+++ b/project1.html
@@ -5,8 +5,55 @@
     <link rel="stylesheet" type="text/css" href="project1.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Something</title>
+    <style>
+        * { padding: 0; margin: 0;}
+        .wraper {
+            display: grid;
+            grid-template-columns: 70% 30%;
+            grid-column-gap: 1em;
+            grid-row-gap: 1em;
+        }
+        .wraper > div{
+            padding: 1em;
+            background-color: aquamarine;
+        }
+        .wraper > .light{ 
+            background-color: bisque;
+        }
+    </style>
 </head>
 <body>
+    <div class="wraper">
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Exercitationem sed delectus animi eos quidem nemo sunt,
+              non facere magnam, quo tenetur velit quis reprehenderit
+               unde, impedit repudiandae ipsa error officiis itaque quia.
+                Eos eum sit, aut, facere harum fugiat quam voluptatem et 
+                officia quis ratione, atque aspernatur debitis itaque ear
+                um. Corporis quos totam, iusto tenetur ex laboriosam quod
+                 aliquam cumque iure nulla ad molestiae pariatur nemo 
+                 vero voluptate laborum enim.
+        </div>
     
+        
+        <div class="light">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, amet dolore? Sit, expedita eum! Illum consequuntur facere provident fugit amet?
+        </div>
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Exercitationem sed delectus animi eos quidem nemo sunt,
+              non facere magnam, quo tenetur velit quis reprehenderit
+               unde, impedit repudiandae ipsa error officiis itaque quia.
+                Eos eum sit, aut, facere harum fugiat quam voluptatem et 
+                officia quis ratione, atque aspernatur debitis itaque ear
+                um. Corporis quos totam, iusto tenetur ex laboriosam quod
+                 aliquam cumque iure nulla ad molestiae pariatur nemo 
+                 vero voluptate laborum enim.
+        </div>
+        <div class="light">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, amet dolore? Sit, expedita eum! Illum consequuntur facere provident fugit amet?
+        </div>
+    </div>
 </body>
 </html>
